logs/windows_api_mcp_bridge_0_20251005_002843.log
  File "E:\ECHO_XV4\MLS\servers\windows_api_mcp_bridge.py", line 92
    return [
           ^
SyntaxError: '[' was never closed
